@startuml AdapterCrypto
skinparam classAttributeIconSize 0

title Adapter Pattern - Crypto Market Data Adapter

class ArbitrageBotClient {
  - _marketDataProvider: IExchangeMarketDataProvider
  +ScanPair(tradingPair: string): string
}

interface IExchangeMarketDataProvider {
  +GetNormalizedTicker(tradingPair: string): string
}

class LegacyExchangeTickerService {
  +GetTickerLegacyFormat(baseAsset: string, quoteAsset: string): string
}

class LegacyExchangeTickerAdapter {
  - _adaptee: LegacyExchangeTickerService
  +GetNormalizedTicker(tradingPair: string): string
}

ArbitrageBotClient --> IExchangeMarketDataProvider
IExchangeMarketDataProvider <|.. LegacyExchangeTickerAdapter
LegacyExchangeTickerAdapter --> LegacyExchangeTickerService

note bottom of LegacyExchangeTickerAdapter
  parts = tradingPair.split("/")
  baseAsset = parts[0]
  quoteAsset = parts[1] or "USDT"
  return _adaptee.GetTickerLegacyFormat(baseAsset, quoteAsset)
end note
@enduml
